# optirs

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  LICENSE-APACHE  LICENSE-MIT  MIGRATION_FROM_SCIRS2.md  README.md  SCIRS2_INTEGRATION_POLICY.md  TODO.md  USAGE_GUIDE.md  regression_detector
optirs/: Cargo.toml  README.md  TODO.md
optirs-bench/: Cargo.toml  README.md  TODO.md
optirs-bench/src/: advanced_cross_platform_orchestrator.rs  advanced_leak_detectors.rs  advanced_memory_leak_detector.rs  advanced_pattern_detection.rs  automated_test_runners.rs  comprehensive_security_auditor.rs  cross_framework.rs  cross_platform_tester.rs  documentation_analyzer.rs  enhanced_memory_monitor.rs  lib.rs  memory_leak_detector.rs  memory_optimizer.rs  memory_profiler_integration.rs  mod.rs  mod_impl.rs  performance_profiler.rs  performance_regression_detector.rs  regression_tester_refactored.rs
optirs-bench/src/advanced_cross_platform_orchestrator/: aggregator.rs  cloud.rs  config.rs  container.rs  matrix.rs  mod.rs  orchestrator.rs  resources.rs  types.rs
optirs-bench/src/ci_cd_automation/: artifact_management.rs  config.rs  core_automation.rs  integrations.rs  mod.rs  performance_gates.rs  reporting.rs  test_execution.rs
optirs-bench/src/regression_tester/: alerts.rs  config.rs  database.rs  detectors.rs  mod.rs  statistics.rs  types.rs
optirs-bench/src/security_auditor/: config.rs  input_validation.rs  memory_safety.rs  mod.rs  privacy.rs  results.rs  types.rs
optirs-core/: Cargo.toml  README.md  TODO.md
optirs-core/benches/: gpu_benchmarks.rs  memory_efficient_benchmarks.rs  metrics_benchmarks.rs  optimizer_benchmarks.rs  parallel_benchmarks.rs  simd_benchmarks.rs
optirs-core/examples/: advanced_optimization.rs  new_optimizers.rs  new_optimizers_rc1.rs  performance_optimization.rs  production_monitoring.rs
optirs-core/src/: error.rs  gpu_optimizer.rs  gradient_flow.rs  lib.rs  loss_landscape.rs  memory_efficient_optimizer.rs  optimizer_metrics.rs  parallel_optimizer.rs  profiling_integration.rs  self_tuning.rs  simd_optimizer.rs  unified_api.rs  visualization.rs
optirs-core/src/adaptive_selection/: mod.rs
optirs-core/src/benchmarking/: cross_platform_tester.rs  mod.rs
optirs-core/src/coordination/: mod.rs
optirs-core/src/curriculum_optimization/: mod.rs
optirs-core/src/distributed/: fedprox.rs  mod.rs
optirs-core/src/domain_specific/: mod.rs
optirs-core/src/gradient_accumulation/: mod.rs
optirs-core/src/gradient_processing/: mod.rs
optirs-core/src/hardware_aware/: mod.rs
optirs-core/src/memory_efficient/: mod.rs
optirs-core/src/metrics/: mod.rs  optimizer.rs  scheduler.rs
optirs-core/src/neural_integration/: mod.rs
optirs-core/src/neuromorphic/: energy_efficient.rs  event_driven.rs  mod.rs  spike_based.rs
optirs-core/src/online_learning/: mod.rs
optirs-core/src/optimizer_composition/: mod.rs
optirs-core/src/optimizers/: adabound.rs  adadelta.rs  adagrad.rs  adam.rs  adamw.rs  grouped_adam.rs  lamb.rs  lars.rs  lbfgs.rs  lbfgs_simple.rs  lion.rs  lookahead.rs  meta_sgd.rs  mod.rs  radam.rs  ranger.rs  reptile.rs  rmsprop.rs  sam.rs  sgd.rs  sgd_simd.rs  sparse_adam.rs
optirs-core/src/parameter_groups/: mod.rs
optirs-core/src/plugin/: core.rs  loader.rs  mod.rs  registry.rs  sdk.rs  template_generator.rs  template_generator.rs.old  validation.rs  validator.rs
optirs-core/src/privacy/: byzantine_tolerance.rs  dp_sgd.rs  enhanced_audit.rs  mod.rs  moment_accountant.rs  noise_mechanisms.rs  private_hyperparameter_optimization.rs  secure_multiparty.rs  utility_analysis.rs
optirs-core/src/regularizers/: activity.rs  dropconnect.rs  dropout.rs  elastic_net.rs  entropy.rs  group_lasso.rs  l1.rs  l2.rs  label_smoothing.rs  manifold.rs  mixup.rs  mod.rs  orthogonal.rs  shakedrop.rs  spatial_dropout.rs  spectral_norm.rs  stochastic_depth.rs  weight_standardization.rs
optirs-core/src/reinforcement_learning/: actor_critic.rs  mod.rs  natural_gradients.rs  policy_gradient.rs  trust_region.rs
optirs-core/src/research/: benchmarks.rs  citations.rs  collaboration.rs  conferences.rs  datasets.rs  experiments.rs  funding.rs  mod.rs  peer_review.rs  publications.rs  reproducibility.rs
optirs-core/src/schedulers/: attention_aware.rs  (+15 more)
optirs-gpu/: Cargo.toml  README.md  TODO.md
optirs-gpu/src/: adagrad_gpu.rs  adam_gpu.rs  adamw_gpu.rs  advanced_memory_optimization.rs  backends.rs  cross_platform_abstraction.rs  cuda_kernels.rs  kernels.rs  lamb_gpu.rs  lib.rs  memory_pool.rs  mixed_precision.rs  mod.rs  multi_gpu.rs  multi_gpu_example.rs  multi_gpu_sync.rs  performance_benchmarks.rs  rmsprop_gpu.rs  rocm_backend.rs  sgd_gpu.rs  tensor_cores.rs  utils.rs
optirs-learned/: Cargo.toml  README.md  TODO.md
optirs-learned/src/: adaptive.rs  adaptive_transformer_enhancement.rs  candle_integration.rs  common.rs  continual_learning.rs  cross_domain_transfer.rs  episodic_memory_impl.rs  error.rs  few_shot.rs  few_shot_impl.rs  few_shot_learning_enhancement.rs  few_shot_optimizer.rs  forward_mode.rs  higher_order.rs  higher_order_gradients.rs  lib.rs  lstm.rs  lstm_optimizer.rs  meta_gradients.rs  meta_learning.rs  mod.rs  online_maml.rs  performance_profiler.rs  reverse_mode.rs  second_order_methods.rs
optirs-nas/: Cargo.toml  README.md  TODO.md
optirs-nas/src/: architecture.rs  architecture_embedding.rs  architecture_space.rs  automated_hyperparameter_optimization.rs  controllers.rs  domain_specific_nas.rs  error.rs  evaluation.rs  hyperparameter.rs  hyperparameter_optimization.rs  lib.rs  mod.rs  multi_objective.rs  performance_evaluation.rs  progressive.rs  search_strategies.rs
optirs-tpu/: Cargo.toml  README.md  TODO.md
optirs-tpu/src/: coordination.rs  error.rs  fault_tolerance.rs  lib.rs  main_types.rs  mod.rs  monitoring.rs  synchronization.rs  tpu_backend.rs
optirs-wasm/: Cargo.toml  README.md  build-wasm.sh  optirs.d.ts  package.json
optirs-wasm/.cargo/: config.toml
optirs-wasm/src/: config.rs  error.rs  lib.rs  metrics.rs  types.rs  wasm_api.rs  webgpu.rs
optirs-wasm/tests/: wasm_tests.rs
optirs/src/: lib.rs
(+747 files in other folders)
