[package]
name = "optirs-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "OptiRS core optimization algorithms and utilities"
license.workspace = true
repository.workspace = true
keywords = ["optimization", "sgd", "adam", "adamw", "rmsprop"]
categories = ["science", "mathematics", "algorithms"]

[lints]
workspace = true

[dependencies]
# 🚨 FORBIDDEN DEPENDENCIES REMOVED - Use SciRS2-Core abstractions instead
# ndarray - Use scirs2_core::ndarray
# ndarray-rand - Use scirs2_core::ndarray
# num-traits - Use scirs2_core::numeric
# num-complex - Use scirs2_core::numeric
# rand, rand_distr - Use scirs2_core::random
# fastrand - Use scirs2_core::random
# rayon - Use scirs2_core::parallel_ops
# wide - Use scirs2_core::simd_ops

# Standard Rust dependencies (allowed)
thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
chrono = { workspace = true }
sha2 = { workspace = true }
log = { workspace = true }

# 🚨 SciRS2 FOUNDATION INTEGRATION 🚨
#
# OptiRS-Core uses SciRS2 as its scientific computing foundation.
# ALL scientific computing MUST go through scirs2-core abstractions.
# Following SciRS2 Ecosystem Policy (v3.0.0) from SCIRS2_INTEGRATION_POLICY.md
#
scirs2-core = { workspace = true }        # FOUNDATION - Core scientific primitives
                                          # Provides: random, ndarray, numeric, simd_ops, parallel_ops
scirs2-optimize = { workspace = true }    # ESSENTIAL - Base optimization interfaces
scirs2-linalg = { workspace = true }      # ESSENTIAL - Matrix operations for optimization
scirs2-autograd = { workspace = true }    # ESSENTIAL - Automatic differentiation
scirs2-neural = { workspace = true }      # ESSENTIAL - Neural network optimization support
scirs2-metrics = { workspace = true }     # ESSENTIAL - Performance monitoring and benchmarks
scirs2-stats = { workspace = true }       # ESSENTIAL - Statistical analysis functions
scirs2-signal = { workspace = true }      # EVIDENCE - Signal processing
scirs2-series = { workspace = true }      # EVIDENCE - Time series analysis
scirs2-datasets = { workspace = true }    # EVIDENCE - Dataset handling

# System utilities (allowed - not scientific computing)
uuid = { workspace = true }               # For generating unique identifiers
futures = { workspace = true }            # For async operations
sysinfo = { workspace = true }            # For system information
num_cpus = { workspace = true }           # For CPU count detection

[dev-dependencies]
approx = { workspace = true }
criterion = { workspace = true }
tempfile = { workspace = true }

[features]
default = ["std"]
std = []
# parallel and simd features removed - use scirs2_core::parallel_ops and scirs2_core::simd_ops directly