[package]
name = "optirs-gpu"
version.workspace = true
edition.workspace = true
authors.workspace = true
description = "OptiRS GPU acceleration and multi-GPU optimization"
license.workspace = true
repository.workspace = true
keywords = ["gpu", "cuda", "metal", "opencl", "optimization"]
categories = ["science", "algorithms", "hardware-support"]

[lints]
workspace = true

[dependencies]
# Core dependencies
optirs-core = { workspace = true }
scirs2-core = { workspace = true }  # Required for SciRS2 policy compliance

# ❌ FORBIDDEN DEPENDENCIES REMOVED - Use SciRS2-Core abstractions instead
# ndarray - Use scirs2_core::ndarray
# num-traits - Use scirs2_core::numeric

thiserror = { workspace = true }
serde = { workspace = true, features = ["derive"] }
log = { workspace = true }

# Cross-platform GPU backends
cudarc = { workspace = true, optional = true }
opencl3 = { workspace = true, optional = true }
wgpu = { workspace = true, optional = true }
pollster = { workspace = true, optional = true }

# Async support
tokio = { workspace = true, features = ["rt"] }
futures = { workspace = true }

# Platform-specific GPU backends
[target.'cfg(target_os = "macos")'.dependencies]
metal = { version = "0.32.0", optional = true }
objc2 = { version = "0.6.2", optional = true }
objc2-foundation = { version = "0.3.1", optional = true }
objc2-metal-performance-shaders = { version = "0.3.1", optional = true }

[dev-dependencies]
approx = { workspace = true }
tokio-test = { workspace = true }

[features]
default = ["wgpu"]
cuda = ["cudarc"]
opencl = ["opencl3"]
wgpu = ["dep:wgpu", "pollster"]
# Note: metal feature only available on macOS due to platform-specific dependencies