[package]
name = "optirs-wasm"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "WebAssembly bindings for OptiRS - High-performance optimizer and scheduler library for the browser"
keywords = ["optimization", "wasm", "webassembly", "machine-learning", "deep-learning"]
categories = ["wasm", "science", "mathematics"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
optirs-core = { workspace = true }
scirs2-core = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# WASM dependencies (optional, enabled via `wasm` feature)
wasm-bindgen = { workspace = true, optional = true }
wasm-bindgen-futures = { workspace = true, optional = true }
js-sys = { workspace = true, optional = true }
web-sys = { workspace = true, optional = true, features = ["console", "Window", "Performance"] }
serde-wasm-bindgen = { workspace = true, optional = true }
console_error_panic_hook = { workspace = true, optional = true }
getrandom = { workspace = true, optional = true }

# Force getrandom 0.2 (transitive via rand/statrs/scirs2) to use js backend on wasm32
[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom_02 = { package = "getrandom", version = "0.2", features = ["js"] }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = []
wasm = [
    "dep:wasm-bindgen",
    "dep:wasm-bindgen-futures",
    "dep:js-sys",
    "dep:web-sys",
    "dep:serde-wasm-bindgen",
    "dep:console_error_panic_hook",
    "dep:getrandom",
]
webgpu = ["wasm"]
